--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 - import @
 - responsive
 - animations
+- Mode Eng/FR
 
 */
 
@@ -13,8 +14,8 @@
 }
 
 .container {
-  max-width: 100vh;
-  width: 100%;
+  /*max-width: 100vh;*/
+  width: 90%;
 }
 
 .bienvenue {
@@ -24,7 +25,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -64,19 +64,22 @@ body {
 /* All projects */
 
 .projects {
-  margin: 0 2rem;
 }
 
 .allprojects {
   border: 2px solid rgb(191, 191, 201);
   box-shadow: 5px 5px rgb(202, 228, 236);
   display: flex;
-  gap: 3rem;
   border-radius: 5px;
+  /*min-width: 50rem;*/
+  position: relative;
+  margin: 2rem 0;
 }
 
 .description-projet-container {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .description-projet {
@@ -84,29 +87,51 @@ body {
 }
 
 .link-container {
-  display: flex;
-  margin: 2rem 5rem 0 auto;
+  margin: 1rem 5rem 1rem auto;
 }
 
 .link-container > * {
-  margin: 0 2rem;
-  margin-left: auto;
+  margin: 0.5rem;
+  /*max-height: 2.5em;*/
+  line-height: 3rem;
+  text-decoration: none;
+}
+
+.link-project {
+  background-color: #11b3c9; /* Green background */
+  border: none;
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+}
+
+.link-git {
+  background-color: #a5afab; /* Green background */
+  border: none;
+  color: white; /* White text */
+  padding: 10px 35px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+}
+
+.link-project:hover {
+  background-color: #a5afab;
+}
+
+.link-git:hover {
+  background-color: #6ae6b4;
 }
 
 /* Frontend */
 
-.fprojects {
-  margin: 2rem 0;
-}
-
 /* Backend */
 
 .bprojects {
-  margin: 2rem 0;
+  /*margin: 2rem 0;*/
 }
 
 /* Footer */
 
 footer {
   text-align: center;
+  margin: 3em;
 }
