--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
 - responsive
 - animations
 - Mode Eng/FR
+- zoom
+- Email
+- jour/nuit
+- Stack principal / notions / à venir
+- champs demon git pas centrés en responsive
 
 */
 
@@ -15,12 +20,22 @@
 
 .container {
   /*max-width: 100vh;*/
-  width: 90%;
+  width: 50%;
 }
 
-.bienvenue {
+/* Typewriter effect */
+.welcome {
   text-align: center;
 }
+
+h1 {
+  display: inline;
+  border-bottom: 1px solid #72c3c9;
+}
+
+/* Borders */
+
+/* Body */
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -67,16 +82,18 @@ body {
 }
 
 .allprojects {
-  border: 2px solid rgb(191, 191, 201);
+  border: 2px solid rgb(255, 255, 255);
   box-shadow: 5px 5px rgb(202, 228, 236);
   display: flex;
   border-radius: 5px;
   /*min-width: 50rem;*/
-  position: relative;
+  /*position: relative;*/
   margin: 2rem 0;
+  background-color: #edf9fc;
+  min-width: 20rem;
 }
 
-.description-projet-container {
+.description-project-container {
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -87,13 +104,15 @@ body {
 }
 
 .link-container {
-  margin: 1rem 5rem 1rem auto;
+  margin: 1rem 0rem 1rem auto;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .link-container > * {
   margin: 0.5rem;
   /*max-height: 2.5em;*/
-  line-height: 3rem;
+  /*line-height: 3rem;*/
   text-decoration: none;
 }
 
@@ -133,5 +152,19 @@ body {
 
 footer {
   text-align: center;
-  margin: 3em;
+  background-color: #e3ebe8;
+  height: 2rem;
 }
+
+/*@media (max-width: 1720px) {
+  * {
+    color: blue;
+  }
+
+  .description-project-container {
+  }
+
+  .link-container {
+    margin: 1rem 0rem 1rem auto;
+  }
+}*/
