--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 - jour/nuit
 - Stack principal / notions / à venir
 - champs demon git pas centrés en responsive
+- fleche pour aller aux projets
 
 */
 
@@ -18,9 +19,9 @@
   padding: 0;
 }
 
-.container {
+.projects-page {
   /*max-width: 100vh;*/
-  width: 50%;
+  /*width: 50%;*/
 }
 
 /* Typewriter effect */
@@ -33,7 +34,20 @@ h1 {
   border-bottom: 1px solid #72c3c9;
 }
 
-/* Borders */
+.container {
+}
+
+.main-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+header {
+}
 
 /* Body */
 
@@ -42,6 +56,32 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+/* main page */
+
+#showcase {
+  /*background-image: url("image.jpg");*/
+  background-position: center;
+  background-color: #92eefa;
+  text-align: center;
+}
+
+.read-button {
+  font-size: 18px;
+  text-decoration: none;
+  border: #ca4a18 1px solid;
+  border-radius: 40px;
+  padding: 20px;
+  margin: 4vh auto;
+  min-width: 200px;
+  max-width: 200px;
+  cursor: pointer;
+}
+
+.read-button:hover {
+  background-color: #ca4a18;
 }
 
 /* Header */
@@ -156,9 +196,13 @@ footer {
   height: 2rem;
 }
 
-/*@media (max-width: 1720px) {
+/*
+@media (max-width: 800px) {
   * {
     color: blue;
+  }
+
+  .main-page {
   }
 
   .description-project-container {
