--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
 /* Notes à faire:
 
+Autres :
 - import @
 - responsive
 - animations
 - Mode Eng/FR
 - zoom
-- Email
 - jour/nuit
 - Stack principal / notions / à venir
-- champs demon git pas centrés en responsive
-- fleche pour aller aux projets
+
+- livres d'informatique en cours de Lecture
+
+Importants :
+- Email / contact
+- fleche/bouton pour aller aux projets
+- Police de caractère
+- Photo
+- Menu de nagivation
+- Typewriter
+- CV à télécharger : https://dev.to/erdeepbag/create-direct-download-link-from-github-files-35n7#:~:text=You%20can%20create%20direct%20download,this%20link%20for%20web%20development.
+- Pour en savoir plus... CV
 
 */
 
@@ -20,21 +30,21 @@
 }
 
 .projects-page {
-  /*max-width: 100vh;*/
-  /*width: 50%;*/
+  min-height: 100vh;
+  display: flex;
+  justify-content: center; /* A VOIR SI SUPPRIMER */
+  align-items: center;
+  flex-direction: column;
 }
 
 /* Typewriter effect */
+
 .welcome {
-  text-align: center;
 }
 
 h1 {
   display: inline;
-  border-bottom: 1px solid #72c3c9;
-}
-
-.container {
+  /*border-bottom: 1px solid #72c3c9;*/
 }
 
 .main-page {
@@ -53,16 +63,29 @@ header {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+}
+
+.main-page {
+  background: linear-gradient(-45deg, #d4b2a7, #e9e3e3, #a1d0e0, #c3ece3);
+  background-size: 400% 400%;
+  animation: gradient 8s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 /* main page */
 
 #showcase {
-  /*background-image: url("image.jpg");*/
   background-position: center;
   background-color: #92eefa;
   text-align: center;
@@ -86,7 +109,7 @@ body {
 
 /* Header */
 
-.bienvenue {
+.welcome {
   margin: 2rem;
 }
 
@@ -100,14 +123,23 @@ body {
   margin: 0 0.5rem 0 0.5rem;
 }
 
-.cv {
-  margin: 2rem 0;
-  text-align: center;
+/* Projects */
+
+.title-my-projects {
+  /*text-align: center;*/
+  margin: 3rem auto;
 }
 
-.projectsdescription {
-  margin: 2rem 0;
-  text-align: center;
+.upcoming-project {
+  margin: 0rem 5rem 3rem 5rem;
+  font-weight: bold;
+  color: #7e8081;
+  font-size: 15px;
+  border: #c1d3d8 1px solid;
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 15px;
+  cursor: wait;
 }
 
 .description {
@@ -118,7 +150,8 @@ body {
 
 /* All projects */
 
-.projects {
+.projects-page {
+  margin-bottom: 0;
 }
 
 .allprojects {
@@ -126,8 +159,6 @@ body {
   box-shadow: 5px 5px rgb(202, 228, 236);
   display: flex;
   border-radius: 5px;
-  /*min-width: 50rem;*/
-  /*position: relative;*/
   margin: 2rem 0;
   background-color: #edf9fc;
   min-width: 20rem;
@@ -184,16 +215,33 @@ body {
 
 /* Backend */
 
-.bprojects {
-  /*margin: 2rem 0;*/
+/* CV */
+
+.cv-page {
+  background-color: #cfd4c8;
+  height: 30vh;
+  width: 100%;
+  text-align: center;
+}
+
+.cv-title {
+  border-bottom: 1px solid #72c3c9;
+}
+
+.cv-link {
+  display: block;
+  /*margin-top: 5rem;*/
 }
 
 /* Footer */
 
 footer {
-  text-align: center;
   background-color: #e3ebe8;
-  height: 2rem;
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*
