--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ Importants :
 }
 
 h1 {
-  display: inline;
+  /*display: inline;*/
   /*border-bottom: 1px solid #72c3c9;*/
 }
 
@@ -161,7 +161,7 @@ body {
   border-radius: 5px;
   margin: 2rem 0;
   background-color: #edf9fc;
-  min-width: 20rem;
+  /*min-width: 20rem; A VOIR */
 }
 
 .description-project-container {
@@ -188,19 +188,19 @@ body {
 }
 
 .link-project {
-  background-color: #11b3c9; /* Green background */
+  background-color: #11b3c9;
   border: none;
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
+  color: white;
+  padding: 10px 24px;
+  cursor: pointer;
 }
 
 .link-git {
-  background-color: #a5afab; /* Green background */
+  background-color: #a5afab;
   border: none;
-  color: white; /* White text */
-  padding: 10px 35px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
+  color: white;
+  padding: 10px 35px;
+  cursor: pointer;
 }
 
 .link-project:hover {
@@ -219,18 +219,28 @@ body {
 
 .cv-page {
   background-color: #cfd4c8;
-  height: 30vh;
+  height: 15rem;
   width: 100%;
   text-align: center;
+  display: flex;
+  /*justify-content: center;*/
+  align-items: center;
+  flex-direction: column;
 }
 
 .cv-title {
   border-bottom: 1px solid #72c3c9;
+  margin-top: 5vh;
 }
 
 .cv-link {
-  display: block;
-  /*margin-top: 5rem;*/
+  border: #3fc4c9 1px solid;
+  background-color: #b9d4c3;
+  border-radius: 40px;
+  padding: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  margin: 5vh;
 }
 
 /* Footer */
@@ -238,25 +248,37 @@ body {
 footer {
   background-color: #e3ebe8;
   width: 100%;
-  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 /*
-@media (max-width: 800px) {
+@media (max-width: 300px) {
   * {
     color: blue;
   }
 
-  .main-page {
+
+  .welcome {
+    margin: 2rem;
+    text-orientation: upright;
   }
 
-  .description-project-container {
+
+  .allprojects {
+  }
+
+  .cv-page {
+    height: 100vh;
+  }
+
+  footer {
+    height: 50vh;
   }
 
   .link-container {
     margin: 1rem 0rem 1rem auto;
   }
-}*/
+}
+*/
