--- a/style.css
+++ b/style.css
@@ -248,9 +248,11 @@ body {
 footer {
   background-color: #e3ebe8;
   width: 100%;
+  height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 /*
