--- a/style.css
+++ b/style.css
@@ -47,42 +47,32 @@ h1 {
 .main-page {
   min-height: 100vh;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  display: grid;
 }
 
 .main-page-content {
 }
 
-header {
-}
-
 /* Navigation bar */
 
 .navigation-bar {
-  /*display: flex;
-  align-items: center;
-  justify-content: center;*/
-  position: absolute;
-  top: 2%;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  border-bottom: #5e5858 0.1px solid;
+  opacity: 80%;
 }
 
-ul {
-  list-style-type: none;
+.sticky {
   display: flex;
+  justify-content: center;
 }
 
 .navigation-bar a {
-  margin-right: 2rem;
+  margin: 1.5rem;
   text-decoration: none;
-  color: #333; /* Adjust color as needed */
+  color: #333;
   font-weight: bold;
-  text-align: center;
-}
-
-li {
   text-align: center;
 }
 
@@ -116,6 +106,7 @@ body {
   background-position: center;
   background-color: #92eefa;
   text-align: center;
+  margin: 0;
 }
 
 .read-button {
@@ -246,7 +237,7 @@ body {
 
 .cv-page {
   background-color: #cfd4c8;
-  height: 15rem;
+  min-height: 15rem;
   width: 100%;
   text-align: center;
   display: flex;
@@ -275,7 +266,7 @@ body {
 footer {
   background-color: #e3ebe8;
   width: 100%;
-  height: 4rem;
+  min-height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -311,9 +302,3 @@ footer {
   }
 }
 */
-
-@media screen and (max-width: 500px) {
-  body {
-    color: red;
-  }
-}
