--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ Importants :
 
 */
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   box-sizing: border-box;
   font-family: garamond, Helvetica, sans-serif;
