--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ Importants :
 - CV à télécharger : https://dev.to/erdeepbag/create-direct-download-link-from-github-files-35n7#:~:text=You%20can%20create%20direct%20download,this%20link%20for%20web%20development.
 - mise en forme code
 - animations
+- projet en cours : bulle + lien github
 
 */
 
@@ -38,7 +39,12 @@ html {
   flex-direction: column;
 }
 
+.projects {
+}
+
 /* Typewriter effect */
+
+/* Typewriter end */
 
 .title-my-projects,
 .cv-title {
@@ -168,11 +174,11 @@ a:link {
 
 .title-my-projects {
   /*text-align: center;*/
-  margin: 3rem auto;
+  margin-bottom: 2rem;
 }
 
 .upcoming-project {
-  margin: 0rem 5rem 3rem 5rem;
+  margin: 0.5rem 5rem 3rem 5rem;
   font-weight: bold;
   color: #7e8081;
   font-size: 18px;
@@ -204,7 +210,7 @@ a:link {
   box-shadow: 5px 5px rgb(202, 228, 236);
   display: flex;
   border-radius: 5px;
-  margin: 2rem 0;
+  margin-top: 2rem;
   background-color: #edf9fc;
   /*min-width: 20rem; A VOIR */
 }
@@ -217,6 +223,10 @@ a:link {
 
 .description-projet {
   margin-top: 1rem;
+}
+
+.frontend {
+  margin-bottom: 2rem;
 }
 
 .link-container {
@@ -259,6 +269,10 @@ a:link {
 /* Frontend */
 
 /* Backend */
+
+.backend {
+  margin-bottom: 1rem;
+}
 
 /* CV */
 
